2006-06-19  Alan Coopersmith  <alan.coopersmith@sun.com>

	* xdmcp.c (request_respond): 
	Initialize manufacturerDisplayID.length to 0 too.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/Login.c: 
	* greeter/greet.c:
	* greeter/verify.c: 
	Mark GreetUser (called from xdm) as _X_EXPORT.
	Make all other non-static functions in libXdmGreet _X_INTERNAL.
	
2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* configure.ac:
	* dm.h: 
	Replace old Imake-based SIGNALRETURNSINT with AC_TYPE_SIGNAL

	* configure.ac:
	* util.c
	Replace old Imake #ifdefs with AC_CHECK_FUNCS([sigaction])
	
2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>
	
	* AUTHORS:
	Make initial pass at an AUTHORS list.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* session.c:
	* greeter/Login.c:
	* greeter/Login.h:
	* greeter/LoginP.h:
	* greeter/greet.c:
	* greeter/verify.c:
	Convert PAM code to use full PAM conversation.   Modify greeter to
	allow PAM to prompt for more than just username and password.
	Rely on PAM to initialize Secure RPC & Kerberos credentials when it
	is being used.   (Based on work begun for Sun bug #6398796 
	"Solaris-10: Unable to login thru xdm once password is aged")

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>	

	* dm.c (WaitForChild): 
	* server.c (serverPause): 
	Drop pre-waitpid() support since all POSIX.1-1990 systems have waitpid.

2006-06-02  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Bump version to 1.0.99 for 1.1 branch.

2006-04-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.4

2006-04-14  Alan Coopersmith  <alan.coopersmith@sun.com>

	* greeter/verify.c: 
	<http://bugs.opensolaris.org/bugdatabase/view_bug.do?bug_id=6413255>
	Sun bug #6413255: xdm should check for uid 0, not for username of 
	"root", when doing non-console login check

2006-04-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 